# advent-of-code-2023

./: .pre-commit-config.yaml  Pipfile  README.md  main.py  pyproject.toml
day01/: trebuchet.py
day02/: cube_conundrum.py
day03/: gear_ratios.py
day04/: scratchcards.py
day05/: gardener.py
day06/: boatraces.py
day07/: camelcards.py
day08/: wastelands.py
day09/: mirage.py
day10/: pipemaze.py
day11/: cosmicexpansion.py
