[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Marc-Aurèle Brothier <m@brothier.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
